--- a/css/gameCard.css
+++ b/css/gameCard.css
@@ -20,10 +20,9 @@
 
 .gameCard .foreground svg {
     border-radius: 15px;
-    clip-path: path("M0 0H76.5278C81.5245 0 86.4421 1.24806 90.8341 3.63087L312.153 123.705C316.989 126.328 320 131.388 320 136.889V180H0V0Z");
+    clip-path: url('/assets/img/gameCards/Default_Foreground.svg');
     backdrop-filter: blur(2px);
-    /* filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.25)); */
-    /* background-color: #ffffff60; */
+    filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.25));
 }
 
 .gameCard .foreground h2 {
