--- a/css/index.css
+++ b/css/index.css
@@ -1,192 +1,148 @@
-/* Header */
+/* HEADER */
 header {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
+    padding: var(--margin);
+    background-color: #171717;
     align-items: center;
-
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    padding: 50px;
 }
 
-header>img {
-    width: auto;
+header img {
     height: 50px;
 }
 
-/* Main */
-main {
-    width: 100vw;
-    height: var(--app-height);
-
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-main #contentWrapper {
-    position: absolute;
-    z-index: 2;
-    top: 125px;
-    right: 150px;
+header nav {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    align-content: flex-end;
-    justify-content: space-between;
+    align-items: center;
 }
 
-main #gameDescription {
-    margin-bottom: 15px;
-    max-width: 500px;
-    text-align: end;
+header nav>ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style-type: none;
 }
 
-main #gameTags>a {
-    background-color: rgba(150, 150, 150, 0.5);
-    border-radius: 5px;
-    margin: 0 2.5px;
-    padding: 2px 5px;
+header nav>ul>li:not(:last-child) {
+    margin-right: 20px;
 }
 
-main #gamePlatforms {
-    margin-top: 15px;
-}
-
-main #gamePlatforms img {
-    height: 25px;
-    width: auto;
-    margin-right: 10px;
-}
-
-main button {
-    margin-top: 15px;
-    border: white 2px solid;
-    border-radius: 500px;
-    background-color: transparent;
-    color: white;
-    padding: 5px 10px;
-    cursor: pointer;
-    font-size: 18px;
+header nav>ul>li>a {
+    text-transform: uppercase;
     font-weight: 600;
+    color: white;
 }
 
-main button:hover {
-    background-color: white;
-    color: black;
+/* MAIN */
+section {
+    position: relative;
 }
 
-main #carousel {
+section:nth-of-type(1)>button {
     position: absolute;
-    z-index: 3;
-    bottom: 150px;
-    left: 0;
-
-    display: flex;
-    flex-direction: row;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    margin-bottom: var(--margin);
 }
 
-img#background {
-    position: absolute;
-    top: 0;
-    left: 0;
+section:nth-of-type(1)>img {
     object-fit: cover;
     width: 100%;
-    height: 100%;
-    filter: blur(150px);
+    height: 500px;
 }
 
-main #bottomFade {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 250px;
-    background: rgb(26, 26, 26);
-    background: linear-gradient(180deg,
-            rgba(26, 26, 26, 0) 0%,
-            rgba(26, 26, 26, 0.5) 15%,
-            rgba(26, 26, 26, 0.95) 45%,
-            rgba(26, 26, 26, 0.95) 100%);
+section:nth-of-type(2) {
+    background-color: #171717;
 }
 
-/* Footer */
-footer {
+section:nth-of-type(2)>h1 {
+    color: white;
+}
+
+section:nth-of-type(2)>div {
     display: flex;
-    align-items: flex-end;
     justify-content: space-between;
-    padding: 50px;
-    height: 50px;
-    color: #808080;
+    padding: 0 var(--margin);
+}
 
+section:nth-of-type(2)>div div.game-card {
+    position: relative;
+}
+
+section:nth-of-type(2)>div div.platforms {
     position: absolute;
-    z-index: 2;
     bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-footer>#navArrows a {
-    padding: 0;
-    cursor: pointer;
-}
-
-footer>#navArrows img {
-    height: 33px;
-    width: auto;
-    filter: brightness(100%);
-}
-
-footer>#navArrows img:hover {
-    animation: arrowHover 0.5s forwards;
-}
-
-@keyframes arrowHover {
-    0% {
-        filter: brightness(100%);
-    }
-
-    100% {
-        filter: brightness(999%);
-    }
-}
-
-footer #arrowLeft {
-    margin-right: 50px;
-}
-
-footer>#social {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: calc(var(--margin) / 2);
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 500px;
+    padding: 5px;
     display: flex;
     align-items: center;
 }
 
-footer>#social img {
-    height: auto;
-    width: 33px;
+section:nth-of-type(2)>div div.platforms>img {
+    height: 20px;
+    margin: 0 5px;
 }
 
-footer>#social a:not(:first-of-type) {
-    margin-left: 25px;
+section:nth-of-type(2)>button {
+    cursor: pointer;
+    justify-self: center;
+    margin-top: calc(var(--margin) * 2);
 }
 
-footer>#social a:first-of-type {
-    margin-right: 75px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 20px;
+section:nth-of-type(3) {
+    background-color: white;
 }
 
-footer #mail {
-    text-transform: lowercase;
-    color: #808080;
-    font-size: 16px;
+section:nth-of-type(3)>h1 {
+    color: #171717;
+}
+
+/* FOOTER */
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: var(--margin);
+    background-color: #2F2F2F;
+}
+
+footer div#branding {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+footer div#branding>img {
+    height: 100px;
+    margin-right: var(--margin);
+}
+
+footer div#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+footer div#contact>a {
+    color: white;
+}
+
+footer div#socials {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+footer div#socials>a {
+    margin-left: 15px;
+}
+
+footer div#socials>a>img {
+    height: 30px;
 }
