--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    padding: var(--margin);
+    padding: calc(var(--margin) / 1.3) var(--margin);
     background-color: #171717;
     align-items: center;
 }
@@ -38,6 +38,10 @@ section {
     position: relative;
 }
 
+section:nth-of-type(1) {
+    height: 500px;
+}
+
 section:nth-of-type(1)>button {
     position: absolute;
     bottom: 0;
@@ -64,11 +68,24 @@ section:nth-of-type(2)>h1 {
 section:nth-of-type(2)>div {
     display: flex;
     justify-content: space-between;
-    padding: 0 var(--margin);
+    padding: 0 calc(var(--margin) * 4)
 }
 
 section:nth-of-type(2)>div div.game-card {
     position: relative;
+}
+
+section:nth-of-type(2)>div div#whiteBackground {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: white;
+}
+
+section:nth-of-type(2)>div div.game-card>img {
+    border-radius: 15px;
 }
 
 section:nth-of-type(2)>div div.platforms {
@@ -85,11 +102,12 @@ section:nth-of-type(2)>div div.platforms {
 }
 
 section:nth-of-type(2)>div div.platforms>img {
-    height: 20px;
+    height: 15px;
     margin: 0 5px;
 }
 
 section:nth-of-type(2)>button {
+    position: relative;
     cursor: pointer;
     justify-self: center;
     margin-top: calc(var(--margin) * 2);
@@ -108,7 +126,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: var(--margin);
+    padding: calc(var(--margin)/1.3) var(--margin);
     background-color: #2F2F2F;
 }
 
@@ -119,7 +137,7 @@ footer div#branding {
 }
 
 footer div#branding>img {
-    height: 100px;
+    height: 75px;
     margin-right: var(--margin);
 }
 
