--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@
     --app-height: 100vh;
 
     /* Margin */
-    --margin: 25px;
+    --margin: 50px;
 }
 
 /*----- SCROLLBAR -----*/
@@ -83,7 +83,7 @@ button {
     border: none;
     text-transform: uppercase;
     font-weight: 900;
-    padding: calc(var(--margin) / 2) var(--margin);
+    padding: calc(var(--margin) / 4) calc(var(--margin) / 2);
     display: flex;
     align-items: center;
     justify-content: center;
