--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ section {
 }
 
 section:nth-of-type(1) {
-    height: 500px;
+    height: 600px;
 }
 
 section:nth-of-type(1)>button {
@@ -54,7 +54,7 @@ section:nth-of-type(1)>button {
 section:nth-of-type(1)>img {
     object-fit: cover;
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 section:nth-of-type(2) {
@@ -86,6 +86,10 @@ section:nth-of-type(2)>div div#whiteBackground {
 
 section:nth-of-type(2)>div div.game-card>img {
     border-radius: 15px;
+    /* max-height: 450px;
+    max-width: 300px; */
+    height: calc(450 * 0.05vw);
+    width: calc(300 * 0.05vw);
 }
 
 section:nth-of-type(2)>div div.platforms {
@@ -94,7 +98,7 @@ section:nth-of-type(2)>div div.platforms {
     left: 50%;
     transform: translate(-50%, -50%);
     margin-bottom: calc(var(--margin) / 2);
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgb(0 0 0 / 35%);
     border-radius: 500px;
     padding: 5px;
     display: flex;
