--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,6 +44,7 @@
 html {
     overflow-x: hidden;
     background-color: var(--RichBlack);
+    scroll-behavior: smooth;
 }
 
 body {
@@ -51,6 +52,7 @@ body {
     width: 100vw;
     /* height: var(--app-height); */
     background-color: white;
+    scroll-behavior: smooth;
 }
 
 main {
