--- a/css/index.css
+++ b/css/index.css
@@ -38,11 +38,7 @@ section {
     position: relative;
 }
 
-section:nth-of-type(1) {
-    height: 600px;
-}
-
-section:nth-of-type(1)>button {
+section:nth-of-type(1) .slide>button {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -51,10 +47,58 @@ section:nth-of-type(1)>button {
     margin-bottom: var(--margin);
 }
 
-section:nth-of-type(1)>img {
+section:nth-of-type(1) .slide>img {
     object-fit: cover;
     width: 100%;
-    height: 600px;
+}
+
+section:nth-of-type(1) .slideshow-container {
+    position: relative;
+}
+
+section:nth-of-type(1) .prev,
+section:nth-of-type(1) .next {
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, -50%);
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: 900;
+    color: white;
+    mix-blend-mode: difference;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+section:nth-of-type(1) .prev {
+    left: 15px;
+}
+
+section:nth-of-type(1) .next {
+    right: 15px;
+}
+
+section:nth-of-type(1) .dots {
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+section:nth-of-type(1) .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+section:nth-of-type(1) .active,
+section:nth-of-type(1) .dot:hover {
+    background-color: #717171;
 }
 
 section:nth-of-type(2) {
