--- a/css/index.css
+++ b/css/index.css
@@ -38,49 +38,58 @@ section {
     position: relative;
 }
 
-section:nth-of-type(1) .slide>button {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
+/* Section 1 */
+section:nth-of-type(1) .slideshow-container {
+    position: relative;
+    margin: 100px;
+    margin-bottom: 30px;
+}
+
+section:nth-of-type(1) .slide {
+    border-radius: 15px;
+    padding: 15px;
+    background: #171717;
+    background: linear-gradient(90deg, rgba(23, 23, 23, 1) 25%, rgba(13, 13, 13, 1) 50%, rgba(13, 13, 13, 1) 75%, rgba(23, 23, 23, 1) 100%);
+}
+
+section:nth-of-type(1) .slide>div {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 50px;
+    padding-right: 150px;
+}
+
+section:nth-of-type(1) .slide>div>h2 {
+    color: white;
+}
+
+section:nth-of-type(1) .slide>div>p {
+    color: white;
+}
+
+section:nth-of-type(1) .slide>div>button {
     cursor: pointer;
-    margin-bottom: var(--margin);
+    border: solid white 2px;
+    margin-top: 20px;
+}
+
+section:nth-of-type(1) .slide>div>button:hover {
+    background-color: white;
+    color: #0D0D0D;
 }
 
 section:nth-of-type(1) .slide>img {
+    border-radius: 15px;
     object-fit: cover;
-    width: 100%;
-}
-
-section:nth-of-type(1) .slideshow-container {
-    position: relative;
-}
-
-section:nth-of-type(1) .prev,
-section:nth-of-type(1) .next {
-    position: absolute;
-    top: 50%;
-    transform: translate(0%, -50%);
-    cursor: pointer;
-    font-size: 30px;
-    font-weight: 900;
-    color: white;
-    mix-blend-mode: difference;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-section:nth-of-type(1) .prev {
-    left: 15px;
-}
-
-section:nth-of-type(1) .next {
-    right: 15px;
+    height: 500px;
+    width: 800px;
 }
 
 section:nth-of-type(1) .dots {
+    position: relative;
     text-align: center;
-    position: absolute;
-    bottom: 15px;
     left: 50%;
     transform: translate(-50%, 0%);
 }
@@ -89,20 +98,25 @@ section:nth-of-type(1) .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
+    margin: 0 4px;
+    background-color: #3F3F3F;
+    border-radius: 50px;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
 
-section:nth-of-type(1) .active,
-section:nth-of-type(1) .dot:hover {
-    background-color: #717171;
+section:nth-of-type(1) .active {
+    width: 50px;
+    background-color: #838383;
 }
 
+section:nth-of-type(1) .dot:hover {
+    background-color: #838383;
+}
+
+/* Section 2 */
 section:nth-of-type(2) {
-    background-color: #171717;
+    padding-bottom: var(--margin);
 }
 
 section:nth-of-type(2)>h1 {
@@ -124,7 +138,7 @@ section:nth-of-type(2)>div div#whiteBackground {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50%;
+    height: 55%;
     background-color: white;
 }
 
@@ -161,12 +175,16 @@ section:nth-of-type(2)>button {
     margin-top: calc(var(--margin) * 2);
 }
 
+/* Section 3 */
 section:nth-of-type(3) {
-    background-color: white;
+    background: #ffffff;
 }
 
 section:nth-of-type(3)>h1 {
-    color: #171717;
+    padding-top: var(--margin);
+    background: #0D0D0D;
+    border-radius: 15px 15px 0 0;
+    color: white;
 }
 
 /* FOOTER */
