--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,17 +13,22 @@
 
 /*----- SCROLLBAR -----*/
 ::-webkit-scrollbar {
+    /* width: 8px; */
     width: 0px;
+    z-index: 9999;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px transparent;
-    border-radius: 10px;
+    background: #0d0d0d;
+    z-index: 9999;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: white;
-    border-radius: 10px;
+    width: 2.4px;
+    background-color: hsla(0, 0%, 100%, .2);
+    border-radius: 4px;
+    border: 1.6px solid #0d0d0d;
+    z-index: 9999;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -43,7 +48,7 @@
 
 html {
     overflow-x: hidden;
-    background-color: var(--RichBlack);
+    background-color: #0D0D0D;
     scroll-behavior: smooth;
 }
 
@@ -51,7 +56,7 @@ body {
     margin: 0;
     width: 100vw;
     /* height: var(--app-height); */
-    background-color: white;
+    background-color: #0D0D0D;
     scroll-behavior: smooth;
 }
 
@@ -90,6 +95,6 @@ button {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: #2F2F2F;
+    background-color: #171717;
     color: white;
 }
