:sparkles: Add section dedicated to news

--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ section {
 section:nth-of-type(1) .slideshow-container {
     position: relative;
     margin: 100px;
+    margin: calc(var(--margin) * 2) calc(var(--margin) * 4);
     margin-bottom: 30px;
 }
 
@@ -176,15 +177,78 @@ section:nth-of-type(2)>button {
 }
 
 /* Section 3 */
-section:nth-of-type(3) {
-    background: #ffffff;
-}
-
 section:nth-of-type(3)>h1 {
     padding-top: var(--margin);
     background: #0D0D0D;
     border-radius: 15px 15px 0 0;
     color: white;
+}
+
+section:nth-of-type(3)>div {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 calc(var(--margin) * 4);
+    margin-bottom: 50px;
+}
+
+section:nth-of-type(3)>div>#main-news-card {
+    border-radius: 15px;
+    margin-right: 150px;
+    padding-bottom: 20px;
+    height: fit-content;
+    background: #171717;
+}
+
+section:nth-of-type(3)>div>#main-news-card>img {
+    border-radius: 15px;
+    width: 100%;
+    max-height: 450px;
+    object-fit: cover;
+}
+
+section:nth-of-type(3)>div>#main-news-card>*:not(img) {
+    padding: 0 20px;
+    color: white;
+}
+
+section:nth-of-type(3)>div>#news>.news-card {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 15px;
+    width: 750px;
+    height: 200px;
+    margin: 20px 0;
+    background: #171717;
+    background: linear-gradient(90deg, rgba(23, 23, 23, 1) 25%, rgba(13, 13, 13, 1) 60%, rgba(23, 23, 23, 1) 100%);
+}
+
+section:nth-of-type(3)>div>#news>.news-card:first-of-type {
+    margin-top: 0;
+}
+
+section:nth-of-type(3)>div>#news>.news-card:last-of-type {
+    margin-bottom: 0;
+}
+
+section:nth-of-type(3)>div>#news>.news-card>div {
+    padding: 20px;
+    width: 50%;
+}
+
+section:nth-of-type(3)>div>#news>.news-card>div>h2 {
+    color: white;
+}
+
+section:nth-of-type(3)>div>#news>.news-card>div>p {
+    color: white;
+}
+
+section:nth-of-type(3)>div>#news>.news-card>img {
+    border-radius: 15px;
+    object-fit: cover;
+    height: 200px;
+    width: 200px;
 }
 
 /* FOOTER */
@@ -193,7 +257,7 @@ footer {
     justify-content: space-between;
     align-items: flex-start;
     padding: calc(var(--margin)/1.3) var(--margin);
-    background-color: #2F2F2F;
+    background-color: #171717;
 }
 
 footer div#branding {
