--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,11 +4,9 @@
     --Fuchsia: #F500FF;
     --RichBlack: #090B15;
 
-    /* Viewport */
+    /* Sizing */
     --app-height: 100vh;
-
-    /* Margin */
-    --margin: 50px;
+    --main-side-padding: 25px;
 }
 
 /*----- SCROLLBAR -----*/
@@ -55,7 +53,6 @@ html {
 body {
     margin: 0;
     width: 100vw;
-    /* height: var(--app-height); */
     background-color: #0D0D0D;
     scroll-behavior: smooth;
 }
@@ -81,8 +78,8 @@ h1 {
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
-    padding-top: calc(var(--margin) * 2);
-    padding-bottom: calc(var(--margin) * 2);
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 button {
@@ -90,7 +87,7 @@ button {
     border: none;
     text-transform: uppercase;
     font-weight: 900;
-    padding: calc(var(--margin) / 4) calc(var(--margin) / 2);
+    padding: 12.5px 25px;
     display: flex;
     align-items: center;
     justify-content: center;
