--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -43,14 +43,18 @@
     }
 }
 
-@media (max-width: 1200px) {
-    :root {
-        --main-side-padding: 25px;
-    }
-}
-
 @media (max-width: 800px) {
-    :root {
-        --main-side-padding: 10px;
+    /* Footer */
+    footer {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    footer>#socials {
+        margin-bottom: 50px;
+    }
+
+    footer>div#socials>a {
+        margin-left: 30px;
     }
 }
