--- a/css/responsive/stylesheet.css
+++ b/css/responsive/stylesheet.css
@@ -1,2 +1,12 @@
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
+    :root {
+        --main-side-padding: 25px;
+    }
+}
+
+@media (max-width: 800px) {
+    :root {
+        --main-side-padding: 10px;
+    }
+}@media (max-width: 1000px) {
 }
