--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -43,18 +43,50 @@
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1250px) {
+
     /* Footer */
     footer {
         flex-direction: column-reverse;
         align-items: center;
     }
 
+    footer div#socials {
+        width: fit-content;
+        margin-bottom: 50px;
+    }
+
+    footer div#links {
+        margin-bottom: 50px;
+    }
+
+    footer div#branding {
+        width: fit-content;
+    }
+}
+
+@media (max-width: 800px) {
+
+    /* Footer */
     footer>#socials {
         margin-bottom: 50px;
     }
 
     footer>div#socials>a {
         margin-left: 30px;
+    }
+
+    footer div#branding {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    footer div#branding>img {
+        margin-right: 0;
+        margin-bottom: 50px;
+    }
+
+    footer div#branding>#contact {
+        align-items: center;
     }
 }
