--- a/css/index.css
+++ b/css/index.css
@@ -135,9 +135,12 @@ section:nth-of-type(2)>h1 {
 }
 
 section:nth-of-type(2)>div {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     padding: 0 calc(var(--main-side-padding) * 4);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
 }
 
 section:nth-of-type(2)>div div.game-card {
@@ -146,17 +149,15 @@ section:nth-of-type(2)>div div.game-card {
 
 section:nth-of-type(2)>div div#whiteBackground {
     position: absolute;
-    bottom: 0;
+    top: 330px;
     left: 0;
     width: 100%;
-    height: 55%;
+    height: 80%;
     background-color: white;
 }
 
 section:nth-of-type(2)>div div.game-card>img {
     border-radius: 15px;
-    /* max-height: 450px;
-    max-width: 300px; */
     height: calc(450 * 0.05vw);
     width: calc(300 * 0.05vw);
 }
@@ -205,7 +206,7 @@ section:nth-of-type(3)>div {
 
 section:nth-of-type(3)>div>#main-news-card {
     border-radius: 15px;
-    margin-right: 150px;
+    margin-right: 8vw;
     padding-bottom: 20px;
     height: fit-content;
     background: #171717;
@@ -268,6 +269,7 @@ section:nth-of-type(3)>button {
     border: solid white 2px;
     margin: 50px 0;
     justify-self: center;
+    background-color: #0D0D0D;
 }
 
 section:nth-of-type(3)>button:hover {
@@ -318,6 +320,7 @@ footer div#links>a {
     color: white;
     margin-right: 20px;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 footer div#socials {
