:art: Add row gap to game card grid layout for improved spacing

--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -12,6 +12,7 @@
 
     section:nth-of-type(1) .slide>div {
         padding-right: 50px;
+        height: fit-content;
     }
 
     /* Section 2 */
