--- a/css/index.css
+++ b/css/index.css
@@ -141,6 +141,7 @@ section:nth-of-type(2)>div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
+    row-gap: 50px;
 }
 
 section:nth-of-type(2)>div div.game-card {
