--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,14 @@ header img {
     height: 40px;
 }
 
+header img#logoSmall {
+    display: none;
+}
+
+header img#logoFull {
+    display: block;
+}
+
 header nav {
     display: flex;
     align-items: center;
@@ -89,10 +97,6 @@ section:nth-of-type(1) .slide>div>button:hover {
 section:nth-of-type(1) .slide>img {
     border-radius: 15px;
     object-fit: cover;
-    /* height: 500px;
-    width: 800px;
-    width: 42vw;
-    height: 26.25vw; */
     width: calc(800 * 0.05vw);
     height: calc(500 * 0.05vw);
 }
@@ -135,7 +139,6 @@ section:nth-of-type(2)>h1 {
 }
 
 section:nth-of-type(2)>div {
-    /* display: flex; */
     justify-content: space-between;
     padding: 0 calc(var(--main-side-padding) * 4);
     display: grid;
@@ -153,7 +156,7 @@ section:nth-of-type(2)>div div#whiteBackground {
     top: 330px;
     left: 0;
     width: 100%;
-    height: 80%;
+    height: 75%;
     background-color: white;
 }
 
