--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -67,6 +67,19 @@
 }
 
 @media (max-width: 800px) {
+    /* Section 1 */
+    section:nth-of-type(1) .slideshow-container {
+        margin-top: calc(var(--main-side-padding) * 4);
+    }
+
+    section:nth-of-type(1) .dot {
+        height: 10px;
+        width: 10px;
+    }
+
+    section:nth-of-type(1) .active {
+        width: 30px;
+    }
 
     /* Section 3 */
     section:nth-of-type(3)>div>#news>.news-card {
@@ -87,6 +100,10 @@
 
     footer>div#socials>a {
         margin-left: 30px;
+    }
+
+    footer>div#socials>a:first-of-type {
+        margin-left: 0;
     }
 
     footer div#branding {
