--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -47,6 +47,7 @@
 }
 
 @media (max-width: 800px) {
+
     /* Section 1 */
     section:nth-of-type(1) .slideshow-container {
         margin-top: calc(var(--main-side-padding) * 4);
@@ -59,6 +60,11 @@
 
     section:nth-of-type(1) .active {
         width: 30px;
+    }
+
+    /* Section 2 */
+    section:nth-of-type(2)>div div#whiteBackground {
+        top: 300px;
     }
 
     /* Section 3 */
@@ -81,6 +87,11 @@
     /* Section 1 */
     section:nth-of-type(1) .slide>div {
         padding: 15px;
+    }
+
+    /* Section 2 */
+    section:nth-of-type(2)>div div#whiteBackground {
+        top: 250px;
     }
 
     /* Section 3 */
