:bug: Fix logo element selectors in header for improved accessibility and responsiveness

--- a/css/header.css
+++ b/css/header.css
@@ -11,11 +11,11 @@ header img {
     height: 40px;
 }
 
-header img#logoSmall {
+header a#logoSmall {
     display: none;
 }
 
-header img#logoFull {
+header a#logoFull {
     display: block;
 }
 
