--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -100,6 +100,16 @@
 
     section:nth-of-type(2)>div div.platforms {
         margin-bottom: 5px;
+        padding: 2px 5px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    section:nth-of-type(2)>div div.platforms>img {
+        width: 12px;
+        margin: 0 3px;
     }
 
     /* Section 3 */
